# GIFT-Grab

./: .gitignore  STUDY.md
src/: CMakeLists.txt  STUDY.md  build.sh
src/cmake/boost.python/: CMakeLists.txt
src/cmake/cpp17/: CMakeLists.txt
src/cmake/ffmpeg/: CMakeLists.txt
src/cmake/opencv/: CMakeLists.txt
src/cmake/pixelink_sdk/: CMakeLists.txt
src/cmake/pythonlibs/: CMakeLists.txt
src/ffmpeg/: ffmpeg_video_source.cpp
src/opencv/: opencv_video_target.cpp
src/pixelink_sdk/: .gitignore  INSTALL.INSTRUCTIONS.txt  READ.ME.txt  README.md  docker.sh  makefile  pixelinksdk_video_source.cpp  pixelinksdk_video_source.h  setup.sh
src/pixelink_sdk/include/: PixeLINKApi.h  PixeLINKCodes.h  PixeLINKTypes.h
src/pixelink_sdk/lib/: libJPEGDLL32.so.1.1  libPxLApi.so.4.2.1.11
src/pixelink_sdk/samples/autoExposure/: autoExposure  autoExposure.cpp  autoExposure.d  makefile
src/pixelink_sdk/samples/autoWhiteBalance/: autoWhiteBalance  autoWhiteBalance.cpp  makefile
src/pixelink_sdk/samples/callback/: LinuxUtil.h  callback  callback.cpp  makefile
src/pixelink_sdk/samples/captureOEMLite/: camera.cpp  camera.h  cameraSelectCombo.cpp  cameraSelectCombo.h  captureOEMLite  captureOEMLite.cpp  captureOEMLite.h  exposure.cpp  exposure.h  featurePoller.cpp  featurePoller.h  focus.cpp  focus.h  frameRate.cpp  frameRate.h  gain.cpp  gain.h  imageCapture.cpp  imageCapture.h  imageFlip.cpp  imageFlip.h  pixelAddress.cpp  pixelAddress.h  pixelFormat.cpp  pixelFormat.h  previewButtons.cpp  previewButtons.h  roi.cpp  roi.h  slider.cpp  slider.h  utility.h  whiteBalance.cpp  whiteBalance.h
src/pixelink_sdk/samples/fastMotionVideo/: fastMotionVideo  fastMotionVideo.cpp  getsnapshot.cpp  getsnapshot.h  makefile
src/pixelink_sdk/samples/getCameraFeature/: camerafeatures.c  camerafeatures.h  getCameraFeature  main.c  makefile
src/pixelink_sdk/samples/getCameraInfo/: camerainfo.c  camerainfo.h  getCameraInfo  main.c  makefile
src/pixelink_sdk/samples/getMultipleSnapshots/: getsnapshot.c  main.c  makefile
src/pixelink_sdk/samples/getNextFrame/: getNextFrame  getNextFrame.cpp  makefile
src/pixelink_sdk/samples/getSnapshot/: getSnapshot  getsnapshot.c  getsnapshot.h  main.c
src/pixelink_sdk/samples/gpio/: gpio  gpio.cpp  makefile
src/pixelink_sdk/samples/lowUsbMemory/: lowUsbMemory  main.c  makefile
src/pixelink_sdk/src/: camera.cpp  camera.h  pixelFormat.h  roi.h
src/pixelink_sdk/utilities/: C-OEMLite.glade  PxLVisionAccess  captureOEMLite
src/python/: wrapper.cpp
src/tests/: CMakeLists.txt  test_opencv_visulization.cpp
src/tests/opencv_visulization/: CMakeLists.txt  test_cv_video_target.py  test_file_imshow.py  test_opencv_visulization.cpp
src/tests/pixelink_sdk/: CMakeLists.txt  test_pixelink_preview.cpp
(+55 files in other folders)
