CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

SET(GG_BOOST_COMPONENTS python3)
if(USE_NUMPY)
    LIST(APPEND GG_BOOST_COMPONENTS numpy)
endif(USE_NUMPY)
FIND_PACKAGE(Boost COMPONENTS ${GG_BOOST_COMPONENTS} REQUIRED)
SET(Boost_INCLUDE_DIR ${Boost_INCLUDE_DIR}
    CACHE INTERNAL "Boost.Python include dirs"
)
message(WARNING ${Boost_LIBRARIES})
SET(Boost_LIBRARIES ${Boost_LIBRARIES}
    CACHE INTERNAL "Boost.Python libs"
)
